--- a/test_assignment/src/templates/403.html
+++ b/test_assignment/src/templates/403.html
@@ -1,21 +1,18 @@
 {% extends 'partials/base.html' %}
 {% load static %}
 
-{% block css %}
-
-<link rel="stylesheet" href="{% static 'http_errors/errors.css' %}">
-
-{% endblock %}
-
 {% block title %} {{ title ]} {% endblock %}
 
 {% block content %}
 
 {% include 'partials/navbar.html' %}
 
-<div class="error-container">
-    <h1 class="error-title">403 - Forbidden</h1>
-    <p class="error-message">Sorry, you do not have permission to access this page.</p>
+<div class="error-container" style="text-align: center; margin-top: 50px; display: flex; flex-direction: column; align-items: center;">
+    <img src="{% static 'images/errors/error_403_image.png' %}" alt="Error Image" class="error-image" style="width: 300px; height: auto; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); margin-bottom: 20px;">
+    <h1 class="error-title" style="font-size: 48px; font-weight: bold; margin-bottom: 20px;">403 - Forbidden</h1>
+    <p class="error-message" style="font-size: 24px; margin-top: 20px; margin-bottom: 20px;">Sorry, you do not have permission to access this page.</p>
 </div>
+
+{% include 'partials/footer.html' %}
 
 {% endblock %}
