--- a/test_assignment/src/templates/502.html
+++ b/test_assignment/src/templates/502.html
@@ -13,9 +13,12 @@
 
 {% include 'partials/navbar.html' %}
 
-<div class="error-container">
-    <h1 class="error-title">503 - Service Unavailable</h1>
-    <p class="error-message">Sorry, the server is currently unavailable. Please try again later.</p>
+<div class="error-container" style="text-align: center; margin-top: 50px; display: flex; flex-direction: column; align-items: center;">
+    <img src="{% static 'images/errors/error_502_image.png' %}" alt="Error Image" class="error-image" style="width: 300px; height: auto; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); margin-bottom: 20px;">
+    <h1 class="error-title" style="font-size: 48px; font-weight: bold; margin-bottom: 20px;">502 - Bad Gateway</h1>
+    <p class="error-message" style="font-size: 24px; margin-top: 20px; margin-bottom: 20px;">Sorry, the server received an invalid response.</p>
 </div>
+
+{% include 'partials/footer.html' %}
 
 {% endblock %}
