--- a/test_assignment/src/templates/registration/registration.html
+++ b/test_assignment/src/templates/registration/registration.html
@@ -34,7 +34,7 @@
 {% endif %}
     <div class="registration-container">
         <div class="image-section">
-            <img src="{% static 'image/registration/registration.jpg' %}" alt="Registration Image">
+            <img src="{% static 'images/registration/registration.jpg' %}" alt="Registration Image">
         </div>
         <div class="form-box registration">
             <h2> Registration </h2>
@@ -79,13 +79,13 @@
                 </div>
                  <p class="or-text">or</p>
                 <button class="btn auth-btn google-btn">
-                    <a style="color: cornsilk" href="">
-                        <ion-icon name="logo-google"></ion-icon> Login with Google
+                    <a style="color: cornsilk" href="{% url 'social:begin' 'google-oauth2' %}">
+                        <ion-icon name="logo-google"></ion-icon>Registration via Google
                     </a>
                 </button>
-                <button class="btn auth-btn telegram-btn">
-                    <a style="color: cornsilk" href="">
-                        <ion-icon name="logo-twitter"></ion-icon> Login with Twitter
+                <button class="btn auth-btn github-btn">
+                    <a style="color: cornsilk" href="{% url 'social:begin' "github" %}">
+                        <ion-icon name="logo-github"></ion-icon>Registration via GitHub
                     </a>
                 </button>
             </form>
