--- a/test_assignment/src/static/css/registration/login.css
+++ b/test_assignment/src/static/css/registration/login.css
@@ -198,7 +198,7 @@
     background: #ea0000;
 }
 
-.telegram-btn {
+.github-btn {
     background: #0000cd;
 }
 
@@ -206,7 +206,7 @@
     background: #ff2e16;
 }
 
-.telegram-btn:hover {
+.github-btn:hover {
     background: #1e90ff;
 }
 
