--- a/test_assignment/src/templates/emails/registration_email.html
+++ b/test_assignment/src/templates/emails/registration_email.html
@@ -242,7 +242,7 @@
                             <tr>
                                 <td style="padding: 0px;background-color: #15193b;" align="center">
                                     <table cellpadding="0" cellspacing="0" border="0" style="width:600px;">
-                                        <tr style="background-image: url("{% static "media/core_media/image-2.png" %}");background-repeat: no-repeat;background-position: center top;background-color: transparent;">
+                                        <tr style="background-images: url("{% static "media/core_media/images-2.png" %}");background-repeat: no-repeat;background-position: center top;background-color: transparent;">
                         <![endif]-->
 
                         <!--[if (mso)|(IE)]>
@@ -433,7 +433,7 @@
                             <tr>
                                 <td style="padding: 0px;background-color: #15193b;" align="center">
                                     <table cellpadding="0" cellspacing="0" border="0" style="width:600px;">
-                                        <tr style="background-image: url("{% static "media/core_media/image-4.png" %}");background-repeat: no-repeat;background-position: center top;background-color: transparent;">
+                                        <tr style="background-images: url("{% static "media/core_media/images-4.png" %}");background-repeat: no-repeat;background-position: center top;background-color: transparent;">
                         <![endif]-->
 
                         <!--[if (mso)|(IE)]>
@@ -583,7 +583,7 @@
                             <tr>
                                 <td style="padding: 0px;background-color: #15193b;" align="center">
                                     <table cellpadding="0" cellspacing="0" border="0" style="width:600px;">
-                                        <tr style="background-image: url("{% static "media/core_media/image-3.png" %}");background-repeat: no-repeat;background-position: center top;background-color: transparent;">
+                                        <tr style="background-images: url("{% static "media/core_media/images-3.png" %}");background-repeat: no-repeat;background-position: center top;background-color: transparent;">
                         <![endif]-->
 
                         <!--[if (mso)|(IE)]>
