--- a/test_assignment/src/templates/partials/navbar.html
+++ b/test_assignment/src/templates/partials/navbar.html
@@ -22,7 +22,7 @@
         <ul class="links">
             <li><a href="{% url 'core:index' %}"> Home </a></li>
             <span>|</span>
-            <li><a href=""> Images </a></li>
+            <li><a href="{% url 'images:images_list' %}"> Images </a></li>
             <span>|</span>
             <li><a href="{% url 'core:pricing' %}"> Pricing </a></li>
             <span>|</span>
@@ -38,11 +38,11 @@
             </li>
         </ul>
         {% if user.is_authenticated %}
-        <a href="{% url 'account:login' %}" class="action_btn"> Dashboard </a>
-        <form action="{% url 'account:logout' %}" method="POST">
+        <a href="" class="action_btn"> Dashboard </a>
+        <form id="logout-form" action="{% url 'account:logout' %}" method="POST" style="display: none;">
             {% csrf_token %}
-            <button type="submit" class="action_btn"> Logout </button>
         </form>
+         <a href="#" class="logout-links" onclick="document.getElementById('logout-form').submit(); return false;">Logout</a>
         {% else %}
         <a href="{% url 'account:login' %}" class="action_btn">Sign In / Login </a>
         {% endif %}
@@ -54,7 +54,7 @@
     </div>
    <div class="dropdown_menu">
         <li><a href="{% url 'core:index' %}"> Home </a></li>
-        <li><a href=""> Images </a></li>
+        <li><a href="{% url 'images:images_list' %}"> Images </a></li>
         <li><a href=""> Pricing </a></li>
         <li><a href=""> Contact Us </a></li>
         <li class="dropdown">
@@ -66,7 +66,11 @@
             </div>
         </li>
         {% if user.is_authenticated %}
-        <a href="{% url 'account:login' %}" class="action_btn"> Dashboard </a>
+        <a href="" class="action_btn"> Dashboard </a>
+         <form id="logout-form" action="{% url 'account:logout' %}" method="POST" style="display: none;">
+            {% csrf_token %}
+        </form>
+         <a href="#" class="logout-links" onclick="document.getElementById('logout-form').submit(); return false;">Logout</a>
         {% else %}
         <a href="{% url 'account:login' %}" class="action_btn"> Sign In / Login </a>
         {% endif %}
