--- a/test_assignment/src/templates/partials/pricing.html
+++ b/test_assignment/src/templates/partials/pricing.html
@@ -15,7 +15,7 @@
 <section class="plans__container">
     <div class="plans">
         <div class="plansHero">
-            <h1 class="plansHero__title">Choose your pricing plan</h1>
+            <h1 class="plansHero__title"> 𝓒𝓱𝓸𝓸𝓼𝓮 𝔂𝓸𝓾𝓻 𝓹𝓻𝓲𝓬𝓲𝓷𝓰 𝓹𝓵𝓪𝓷 </h1>
             <h3>Subscription status: {{ subscription_plan|title }}</h3>
             <h3>Delete subscription</h3>
             <a type="button" href="{% url 'subscriptions:confirm_delete_subscription' subscription_id %}">Delete</a>
