--- a/test_assignment/src/templates/partials/base.html
+++ b/test_assignment/src/templates/partials/base.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
-    <link rel="icon" type="image/x-icon" href="{% static 'image/icon.png' %}"/>
+    <link rel="icon" type="image/x-icon" href="{% static 'images/icon.png' %}"/>
     {% block css %} {% endblock %}
 
 </head>
