--- a/test_assignment/src/templates/partials/footer.html
+++ b/test_assignment/src/templates/partials/footer.html
@@ -8,31 +8,27 @@
         <div class="footer-container">
             <div class="row">
                 <div class="footer-col">
-                    <h4> Admissions </h4>
+                    <h4>Contact Us</h4>
                     <ul>
-                        <li><a href="#" target="_blank">  French BR 24/26 </a></li>
-                        <li><a href="#" target="_blank">  phone: (+38-0482) 68-12-84 </a></li>
-                        <li><a href="#" target="_blank"> trans 'phone: (+38-0482) 68-18-58 </a></li>
-                        <li><a href="#" target="_blank"> trans 'phone : (+38-093) 755 78 24 </a></li>
-                        <li><a href="#" target="_blank"> E-mail: vstup@onu.edu.ua </a></li>
+                        <li><a href="mailto:info@yourwebsite.com">Email: test-assignment.com</a></li>
+                        <li><a href="tel:+1234567890">Phone: +1 234 567 890</a></li>
+                        <li><a href="#">Address: 123 Main Street, City, Country</a></li>
                     </ul>
                 </div>
                 <div class="footer-col">
-                    <h4>Rector</h4>
+                    <h4>Pages</h4>
                     <ul>
-                        <li><a href="#" target="_blank"> St. Dvoryanska, 2b Odesa, 65082 </a></li>
-                        <li><a href="#" target="_blank"> Rector (reception): </a></li>
-                        <li><a href="#" target="_blank"> (+380-048) 732-52-54 </a></li>
-                        <li><a href="#" target="_blank"> Tel./fax (+38-048) 723-35-15 </a></li>
-                        <li><a href="#" target="_blank"> Email: rector@onu.edu.ua </a></li>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Images</a></li>
+                        <li><a href="#">Pricing</a></li>
+                        <li><a href="#">Contact Us</a></li>
                     </ul>
                 </div>
                 <div class="footer-col">
-                    <h4> Our partners </h4>
+                    <h4>Privacy Page & Guarantee</h4>
                     <ul>
-                        <li><a href="#" target="_blank"> Ministry of Education and Science of Ukraine</a></li>
-                        <li><a href="#" target="_blank"> Government contact center </a></li>
-                        <li><a href="#" target="_blank"> DNU named after O. Honchara </a></li>
+                        <li><a href="#">Privacy Policy</a></li>
+                        <li><a href="#">Guarantee</a></li>
                     </ul>
                 </div>
                 <div class="footer-col">
@@ -47,9 +43,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            © {% now 'Y' %} The official website of the Odessa National University named after I. I. Mechnikov
-            When using materials, a link to the site is mandatory
-            Technical support is provided by the CIT of ONU
+            © {% now 'Y' %} Test Assignment. All rights reserved.
         </div>
     </footer>
 </body>
