feat: Add style scare in hover to images.

--- a/test_assignment/src/static/css/images/images_list.css
+++ b/test_assignment/src/static/css/images/images_list.css
@@ -52,6 +52,11 @@
     width: 100%;
     height: 350px;
     object-fit: cover;
+    transition: transform 0.3s ease;
+}
+
+.gallery-container img:hover {
+    transform: scale(1.05);
 }
 
 .gallery-container h2 {
