--- a/test_assignment/src/templates/partials/footer.html
+++ b/test_assignment/src/templates/partials/footer.html
@@ -18,9 +18,9 @@
                 <div class="footer-col">
                     <h4>Pages</h4>
                     <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Images</a></li>
-                        <li><a href="#">Pricing</a></li>
+                        <li><a href="{% url 'core:index' %}">Home</a></li>
+                        <li><a href="{% url 'images:images_list' %}">Images</a></li>
+                        <li><a href="{% url 'core:pricing' %}">Pricing</a></li>
                         <li><a href="#">Contact Us</a></li>
                     </ul>
                 </div>
