--- a/test_assignment/src/templates/registration/profile.html
+++ b/test_assignment/src/templates/registration/profile.html
@@ -3,7 +3,7 @@
 
 {% block css %}
 <style>
-    .profile-container {
+    .card {
         max-width: 600px;
         margin: 0 auto;
         padding: 20px;
@@ -11,32 +11,27 @@
         border-radius: 8px;
         background-color: #fff;
     }
-    .profile-header {
+
+    .card-body {
         text-align: center;
+    }
+
+    .icon-container {
         margin-bottom: 20px;
     }
-    .profile-header h1 {
-        margin: 0;
-        font-size: 24px;
-    }
-    .profile-form {
-        display: flex;
-        flex-direction: column;
-    }
-    .profile-form .form-group {
+
+    .form-group {
         margin-bottom: 15px;
     }
-    .profile-form label {
-        font-weight: bold;
-        margin-bottom: 5px;
-    }
-    .profile-form input, .profile-form select {
+
+    .form-control {
         width: 100%;
         padding: 10px;
         border: 1px solid #ccc;
         border-radius: 4px;
     }
-    .profile-form button {
+
+    .btn {
         padding: 10px 20px;
         background-color: #007bff;
         color: #fff;
@@ -45,8 +40,16 @@
         cursor: pointer;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     }
-    .profile-form button:hover {
+
+    .btn:hover {
         background-color: #0056b3;
+    }
+
+    .centered-form-group {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
     }
 </style>
 {% endblock %}
@@ -54,14 +57,44 @@
 {% block title %} Profile Page {% endblock %}
 
 {% block content %}
-<div class="profile-container">
-    <div class="profile-header">
-        <h1>Profile</h1>
+
+{% include 'partials/navbar.html' %}
+
+<div class="card mx-auto">
+    <div class="card-body text-center">
+        <i class="fas fa-user-circle fa-5x mb-3 rounded-circle"></i>
+        <h3>{{ request.user.email }}</h3>
+        <p>Member since: {{ request.user.date_joined }}</p>
+        {% if not request.user.mfa_enabled %}
+        <h4>
+            Enable 2FA with Authenticator App.
+        </h4>
+        <div>
+            <img src="{{ qrcode }}" alt="{{ img_path }}">
+
+            <form method="POST" action="{% url 'account:verify_mfa' %}" class="form text-center">
+                {% csrf_token %}
+                <div class="form-group text-">
+                    <div class="form-group centered-form-group">
+                        <input type="text" id="otp_code" name="otp_code" maxlength="6" required
+                               class="form-control" placeholder="Enter your OTP code">
+                    </div>
+                </div>
+                <input type="hidden" name="user_id" value="{{ request.user.id }}">
+                <button class="btn btn-primary" type="submit">Verify</button>
+            </form>
+
+        </div>
+
+        {% else %}
+        <a href="{% url 'account:disable_2fa' %}" class="btn btn-success" disabled>
+            Disable 2FA
+        </a>
+        {% endif %}
+
     </div>
-    <form class="profile-form" method="post" enctype="multipart/form-data">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Save</button>
-    </form>
 </div>
+
+{% include 'partials/footer.html' %}
+
 {% endblock %}
